# docs-search

./: .gitignore  README.md  pyproject.toml
docs/: README.md  ask-rag.md  cli-reference.md  configuration.md  getting-started.md  indexing.md  registry.md  search.md  web-api.md
src/docs_search/: __init__.py  __main__.py  cli.py  config.py  embed.py  extract.py  graph.py  index_builder.py  ingest.py  models.py  rag.py  registry.py  search.py  server.py  store.py
tests/: test_extract.py  test_ingest.py  test_rag.py  test_search.py  test_store_registry.py
tests/fixtures/sample_docs/: README.md  config.md  widgets.md
