[project]
name = "docs-search"
version = "0.1.0"
description = "Convert GitHub documentation repos into local neurosymbolic search"
readme = "README.md"
authors = [
    { name = "Dan", email = "danclaytonaz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "gitpython>=3.1.52",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[project.scripts]
docs-search = "docs_search.cli:app"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
